<resources>
    <string name="app_name">LaFinance</string>
    <string name="title_activity_cadastra_compra">CadastraCompraActivity</string>
    <string name="title_activity_cadastra_venda">CadastraVendaActivity</string>
    <string name="title_activity_edita_compra">EditaCompraActivity</string>
    <string name="title_activity_carteira_fragment">CarteiraFragment</string>
    <string name="title_activity_home_fragment">HomeFragment</string>
    <string name="title_activity_cadastra_ativo">CadastraAtivoActivity</string>
    <string name="title_activity_edita_ativo">EditaAtivoActivity</string>
    <string name="title_activity_cancela_ativo">CadastraAtivoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_principal">LaFinance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Leonardo Laranjeira</string>
    <string name="nav_header_subtitle">Leolaranjeira18@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">LaFinance</string>
    <string name="menu_ativo">Ativo</string>
    <string name="menu_carteira">Carteira</string>
    <string name="menu_configuracao">Configuração</string>
    <string name="menu_relatorio">Relatório</string>

    <string name="dialog_fragment_titulo_exclui">Deseja excluir o registro?</string>
    <string name="dialog_fragment_cancela">Cancelar</string>
    <string name="dialog_fragment_confirma">Confirmar</string>
    <string name="dialog_fragment_exclui">Excluir</string>
</resources>