<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_ativo"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_ativo" />
        <item
            android:id="@+id/nav_carteira"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_carteira" />
        <item
            android:id="@+id/nav_relatorio"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_relatorio" />
        <item
            android:id="@+id/nav_configuracao"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_configuracao" />
    </group>
</menu>