<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.llo.lafinance.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_carteira"
        android:name="com.llo.lafinance.ui.carteira.CarteiraFragment"
        android:label="@string/menu_carteira"
        tools:layout="@layout/fragment_carteira" />
    <fragment
        android:id="@+id/nav_relatorio"
        android:name="com.llo.lafinance.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_relatorio"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_ativo"
        android:name="com.llo.lafinance.ui.ativo.AtivoFragment"
        android:label="@string/menu_ativo"
        tools:layout="@layout/fragment_ativo" />
    <fragment
        android:id="@+id/nav_configuracao"
        android:name="com.llo.lafinance.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_configuracao"
        tools:layout="@layout/fragment_slideshow" />
</navigation>